# CodeAura

./: .env.example  .gitignore  ADVANCED_FEATURES.md  API_CLIENT_REFERENCE.ts  AWS_DEPLOYMENT.md  Dockerfile  L4_IMPLEMENTATION_ROADMAP.md  L4_TRANSFORMATION_SUMMARY.md  README.md  STATUS_REPORT.md  SYSTEM_DESIGN.md  UPGRADE_SUMMARY.md  analysis_export.csv  analysis_export.json  analysis_export.markdown  docker-compose.yml  pyproject.toml  requirements.txt  test_advanced_features.py
.github/workflows/: ci-cd.yml
backend/: ai_providers.py  analytics.py  analyzer.py  analyzer_cpp.py  auth.py  cache.py  config.py  database.py  exporters.py  github_integration.py  main.py  optimizer.py  prompts.py  schemas.py  utils.py  websocket.py
backend/analyzers/: __init__.py  tree_sitter_analyzer.py
backend/tests/: __init__.py  conftest.py  test_main.py
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1774961580174-b221ddfe80d72.mjs
frontend-react/src/: App.tsx
frontend-react/src/components/: FeatureCard.tsx  Header.tsx  LanguageSelector.tsx  ResultPanel.tsx
frontend-react/src/pages/: Dashboard.tsx  History.tsx  Home.tsx  NotFound.tsx
frontend-react/src/styles/: GlobalStyles.ts  theme.ts
